src/snapshots/venial__tests__parse_where_fn_definitions-2.snap
---
source: src/tests.rs
assertion_line: 510
expression: func_2
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        qualifiers: FunctionQualifiers {
            is_default: false,
            is_const: false,
            is_async: false,
            is_unsafe: false,
            is_extern: false,
            extern_abi: None,
        },
        name: Ident(
            where_clause,
        ),
        generic_params: Some(
            [
                "<",
                "T",
                ">",
            ],
        ),
        params: [],
        where_clauses: Some(
            [
                "where",
                "T",
                ":",
                "Debug",
            ],
        ),
        return_ty: None,
    },
)
