src/snapshots/venial__tests__parse_where_fn_definitions.snap
---
source: src/tests.rs
expression: func
---
Function(
    Function {
        attributes: [],
        vis_marker: None,
        name: Ident(
            where_clause,
        ),
        generic_params: Some(
            [
                "<",
                "T",
                ">",
            ],
        ),
        where_clauses: Some(
            [
                "where",
                "T",
                ":",
                "Debug",
            ],
        ),
        params: [],
        returns: Some(
            [
                "T",
            ],
        ),
    },
)
